# capture-the-flag

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: wheels-to-pages.yml
ctf_core/: Cargo.toml
ctf_core/src/: core.rs  debug.rs  lib.rs  main.rs
ctf_core/src/agent/: components.rs  mod.rs  systems.rs  visual.rs
ctf_core/src/camera/: systems.rs
ctf_core/src/character_controller/: components.rs  events.rs  mod.rs  systems.rs
ctf_core/src/flag/: components.rs  mod.rs  systems.rs
ctf_core/src/interaction_range/: components.rs  events.rs  mod.rs  systems.rs
ctf_core/src/team/: components.rs  mod.rs
ctf_core/src/wall/: components.rs  mod.rs  systems.rs
ctf_core_py/: Cargo.toml  pyproject.toml
ctf_core_py/python/ctf_core/: __init__.py  _core.pyi
ctf_core_py/src/: agent.rs  bridge.rs  config.rs  flag.rs  game.rs  lib.rs  state_queue.rs  team.rs  worker.rs
ctf_core_py/src/agents/: defense_bot.rs  mod.rs
ctf_core_py/src/bridge/: mod.rs  physics.rs  policy.rs
ctf_core_py/src/worker/: mod.rs  policy.rs
src/: debug.rs
src/agent/: systems.rs
src/camera/: mod.rs  systems.rs
src/character_controller/: events.rs  systems.rs
src/flag/: components.rs  mod.rs  systems.rs  visual.rs
src/interaction_range/: components.rs  events.rs  mod.rs  systems.rs  visual.rs
src/team/: components.rs
