[package]
name = "capture-the-flag"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.3.1", features = ["bevy_diagnostic", "diagnostic_ui"] }
bevy = { version = "0.16.1" }
bevy-inspector-egui = "0.33.1"
bevy_gizmos = "0.16.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
