[package]
name = "ctf_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "ctf_core"

[dependencies]
avian3d = { version = "0.3.1", features = ["bevy_diagnostic", "diagnostic_ui"] }
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "tonemapping_luts",
    "x11",
] }
bevy-inspector-egui = "0.33.1"
bevy_gizmos = "0.16.1"
serde = "1.0.228"
