[package]
name = "ctf_core_py"
version = "0.1.1"
edition = "2021"

[lib]
name = "ctf_core_py"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
pyo3-build-config = "0.25"

[features]
pymodule = ["pyo3/extension-module", "pyo3/abi3-py310"]
default = []

[dependencies]
pyo3 = { version = "0.25.1", features = [] }
pyo3-stub-gen = "0.12.2"
ctf_core = { path = "../ctf_core" }
avian3d = "0.3.1"
bevy = "0.16.1"
bevy-inspector-egui = "0.33.1"
crossbeam-channel = "0.5.15"


[[bin]]
name = "stub_gen"
doc = false
