[package]
name = "ctf_core_py"
version = "0.0.7"
edition = "2021"

[lib]
name = "ctf_core_py"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
pyo3-build-config = "0.26"

[features]
pymodule = ["pyo3/extension-module", "pyo3/abi3-py310"]
default = []

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "tonemapping_luts",
    "x11",
    "bevy_log",

] }
bevy-inspector-egui = "0.33.1"
pyo3 = { version = "0.26", features = [] }
pyo3-stub-gen = "0.14.0"
ctf_core = { path = "../ctf_core" }
avian3d = "0.3.1"
crossbeam-channel = "0.5.15"
once_cell = "1.21.3"
serde = "1.0.228"
anyhow = "1.0.100"
serde_json = "1.0.145"
derivative = "2.2.0"


[[bin]]
name = "stub_gen"
doc = false
